fixed action card spacing and added hr element lines to trigger cards

--- a/jsx_refactor/client/automation-finder/src/components/ActionCards/style.css
+++ b/jsx_refactor/client/automation-finder/src/components/ActionCards/style.css
@@ -29,6 +29,6 @@
     border: unset !important;
 }
 
-.action-card {
+/* .action-card {
     margin-top: 20px;
-}
+} */
