--- a/jsx_refactor/client/automation-finder/src/components/AutoAction/style.css
+++ b/jsx_refactor/client/automation-finder/src/components/AutoAction/style.css
@@ -30,5 +30,5 @@
 }
 
 .action-card {
-    margin-top: 20px;
+    margin: 0px 0px 20px 0px;
 }
