--- a/jsx_refactor/client/automation-finder/src/components/ConditionCards/style.css
+++ b/jsx_refactor/client/automation-finder/src/components/ConditionCards/style.css
@@ -7,7 +7,7 @@
 }
 
 .condition-card {
-    margin: 20px 0px 20px 0px;
+    margin: 10px 0px;
 }
 
 .value {
